--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: 'UC Davis Bioinformatics Core 2017 RNA-Seq Workshop'
-tagline: 'June 19th-23rd, 2017'
-name: 'UC Davis Bioinformatics Core 2017 RNA-Seq Workshop'
+title: 'UC Davis Bioinformatics Core 2017 Variant Analysis Workshop'
+tagline: 'August 21-25, 2017'
+name: 'UC Davis Bioinformatics Core 2017 Variant Analysis Workshop'
 
